--- a/ci/config.yml
+++ b/ci/config.yml
@@ -24,6 +24,6 @@ artifact_bucket_region_name: us-west-2
 cf_dev_api: api.run.pivotal.io
 cf_dev_organization: rscale-training-4
 cf_dev_space: gerard.mulder@cgi.com
-cf_dev_hostname: configurator-paranoid-carcass.cfapps.io
+cf_dev_hostname: configurator-paranoid-carcass
 cf_dev_domain: cfapps.io
 cf_dev_manifest: manifest-dev.yml
